fixed the spacing between the keyword dots

--- a/app/assets/stylesheets/_foundation-variables.scss
+++ b/app/assets/stylesheets/_foundation-variables.scss
@@ -27,9 +27,9 @@ $main-color: #cd761f;
 $main-red: #9c161c;
 $main-gray: #b0b3b5;
 
-// $body-bg: #fff;
-// $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-bg: #fff;
+$body-font-color: #787a7d;
+$body-font-family: "Futura-Book", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -97,7 +97,7 @@ $primary-color: $main-color;
 // Grid Variables
 //
 
-$row-width: emCalc(1400px);
+$row-width: emCalc(1500px);
 // $column-gutter: emCalc(30px);
 // $total-columns: 12;
 
